[workspace]
members = [
	"examples",
	"benches",
	"http-server",
	"test-utils",
	"jsonrpsee",
	"tests",
	"types",
	"core",
	"ws-server",
	"client/ws-client",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"proc-macros",
	"wasm-tests",
]
resolver = "2"

[patch.crates-io]
soketto = { path = "/home/niklasad1/Github/soketto" }